--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 title: 404 - Page not found
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+很抱歉！没有您要找的页面. 您可以回到首页 [back to the homepage]({{ site.baseurl }}/).
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
